unpackaged/main/default/objects/pse__Column_Preferences__c/pse__Column_Preferences__c.object-meta.xml
<CustomObject>
    <label>Column Preferences</label>
    <nameField>
        <displayFormat>CP-{0}</displayFormat>
        <label>Column Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>