unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Feature__c.field-meta.xml
<CustomField>
    <fullName>pse__Feature__c</fullName>
    <inlineHelpText>Defines the feature to apply preferences to. Values are: 0 (for Project Planner), 1 (for Resource Planner), 2 (for Project Task Gantt), 3 (for Timecards), 4 (for Timecard Approval) or 5 (for Timecard Task Time).</inlineHelpText>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>