unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Field__c</fullName>
    <inlineHelpText>Contains one or more API names for the fields, including cross-object fields, this column is based on. This is a system-generated field. Do not edit this field manually.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>