unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Order__c.field-meta.xml
<CustomField>
    <fullName>pse__Order__c</fullName>
    <inlineHelpText>The order, from left to right, the column displays in the UI for the indicated feature.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>