unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__User__c.field-meta.xml
<CustomField>
    <fullName>pse__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user to whom the preferences are assigned.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Column_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>