unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Value__c</fullName>
    <inlineHelpText>The saved value of the respective field.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>