unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Visible__c.field-meta.xml
<CustomField>
    <fullName>pse__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When true, the column is visible on the UI for the user.</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>