unpackaged/main/default/objects/pse__Column_Preferences__c/fields/pse__Width__c.field-meta.xml
<CustomField>
    <fullName>pse__Width__c</fullName>
    <inlineHelpText>The width of the column, in pixels.</inlineHelpText>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>