unpackaged/main/default/objects/pse__Column_Preferences__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Feature__c</columns>
    <columns>pse__Field__c</columns>
    <columns>pse__Order__c</columns>
    <columns>pse__User__c</columns>
    <columns>pse__Value__c</columns>
    <columns>pse__Visible__c</columns>
    <columns>pse__Width__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>